--- a/src/scss/themes/theme-light.scss
+++ b/src/scss/themes/theme-light.scss
@@ -2,6 +2,6 @@ body[data-theme="light"] {
     @import '../src/scss/light-slider.scss';
  
     .slider-tab {
-       background-color: #226dc2;
+       background-color: #10253d;
     }
 }
